[package]
name = "rviewer"
version = "0.1.0"
edition = "2021"

[lib]
name = "rviewer"
path = "src/lib.rs"

[dependencies]
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts",
    "glow",
    "persistence",
] }
egui = "0.29.1"
egui_logger = "0.6.1"
rfd = "0.15.1"
serde = { version = "1.0.215", features = ["derive"] }
log = "0.4.22"
image = "0.25.5"
kamadak-exif = "0.6.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false